--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     }
     img{
         animation: freakout 0.2s ease-in-out infinite;
+        width: 75vmin;
     }
     @keyframes freakout{
         0%{
