tapos na pwede na

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: center;
+            flex-direction: column;
             opacity: 0;
             position: absolute;
             top: 15vh;
@@ -64,6 +64,22 @@
             opacity: 0;
             position: absolute;
             bottom: 5vh;
+        }
+
+        button {
+            color: black;
+            border-radius: 10px;
+            background-color: white;
+            margin-top: 20px;
+            border: none;
+            width: 22vmin;
+            height: 6vmin;
+            font-size: 5vmin;
+        }
+        input{
+            background-color: white;
+            text-align: center;
+            color: black;
         }
     </style>
 </head>
@@ -105,10 +121,10 @@
         console.log('\n\n\n double clicked');
         message.style.display = "block";
         message.style.opacity = "1"
-        setTimeout(()=>{
+        setTimeout(() => {
             message.style.opacity = '0';
         }, 2000)
-        setTimeout(()=>{
+        setTimeout(() => {
             message.style.display = 'none';
         }, 2500)
     })
